# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.226 2010/03/17 23:29:55 cardoe Exp $

  17 Mar 2010; Doug Goldstein <cardoe@gentoo.org>
  nvidia-drivers-173.14.20.ebuild:
  still adding back 173.14.20, but repoman doesn't let me stable it right
  away since the ebuild was stable when it was removed..

  17 Mar 2010; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-173.14.20.ebuild:
  add back 173.14.20 at the request of Giao Phan <casret@pobox.com> for bug
  #294089

*nvidia-drivers-195.36.15 (17 Mar 2010)

  17 Mar 2010; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-195.36.15.ebuild:
  add upstream's pre-release version of the 195.x.y series. Still needs to
  be tested on further kernels and x86 before unmasking

  10 Mar 2010; Doug Goldstein <cardoe@gentoo.org>
  -nvidia-drivers-71.86.09.ebuild, -nvidia-drivers-96.43.13.ebuild,
  -nvidia-drivers-173.14.20.ebuild, -nvidia-drivers-173.14.20-r1.ebuild,
  -nvidia-drivers-185.18.36.ebuild, -nvidia-drivers-190.29.ebuild:
  spring cleaning

  10 Mar 2010; Doug Goldstein <cardoe@gentoo.org>
  -nvidia-drivers-195.36.03.ebuild:
  remove the broken drivers

  28 Feb 2010; Fabio Erculiani <lxnay@gentoo.org>
  nvidia-drivers-190.53-r1.ebuild,
  +files/nvidia-drivers-190.53-2.6.33.patch:
  add 2.6.33 kernel support to 190.53

*nvidia-drivers-173.14.25 (27 Feb 2010)

  27 Feb 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +nvidia-drivers-173.14.25.ebuild:
  Version bump, bug 305713

*nvidia-drivers-96.43.16 (15 Feb 2010)

  15 Feb 2010; Jeroen Roovers <jer@gentoo.org>
  +nvidia-drivers-96.43.16.ebuild:
  Version bump thanks to John Brendler (bug #304841).

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org>
  nvidia-drivers-96.43.14.ebuild, nvidia-drivers-173.14.22.ebuild,
  nvidia-drivers-185.18.36-r1.ebuild, nvidia-drivers-190.42-r3.ebuild:
  amd64 stable, bug 299560
